<resources>

    <string name="app_name">final-project</string>
    <string name="title_activity_spencer__favourites">Spencer_Favourites</string>
    <string name="save">Save</string>
    <string name="type">Type here!</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="favourites">Favourites</string>
    <string name="bus">OCTranspo App</string>
    <string name="movie">Movie App</string>
    <string name="news">CBC News</string>
    <string name="hockey">NHL App</string>
    <string name="nutrition">Food/Nutrition App</string>
    <string name="home">Main Menu!</string>



    <string name="nutrition_app_name">Food Nutrition Database</string>

    <string name="btn_search">Search</string>
    <string name="btn_add">Add</string>
    <string name="btn_favourite">Favourite</string>
    <string name="author">Author: Feng Cheng</string>
    <string name="instruction">Instructions: You can search for the calories and fat content of a food. You can add it to your favourite list. On your list, you can retrieve the nutrition information of a selected food. You can also delete an item on your favourite list from the details page. You can add a tag to a food and can get statistics on each tag counting the total calories, average calories, max and min calories.
 </string>
    <string name="calories">Calories:</string>
    <string name="fat">Fat:</string>
    <string name="dialogboxTitle">Food Nutrition Database</string>
    <string name="prompt_to_enter">Please enter something.</string>
    <string name="tag_already">It has a tag already</string>
    <string name="data_insert">Data successfully inserted</string>
    <string name="error">Something went wrong</string>
    <string name="no_result_found">No result found</string>
    <string name="waitmsg">Please wait</string>
    <string name="delConfMsg">Do you really want to delete</string>
    <string name="no">No</string>
    <string name="alertTitle">Alert</string>
    <string name="no_tag_found">No tag found</string>
    <string name="tag_delete">Tag successfully deleted</string>
    <string name="tag_update">Data successfully updated</string>
    <string name="tag_stat_title">Tag: </string>
    <string name="max_cal">Max Calories: </string>
    <string name="min_cal">Min Calories: </string>
    <string name="total_cal">Total Calories: </string>
    <string name="ave_cal">Average Calories: </string>


    <string name="your_favourite_list">My Favourite List</string>
    <string name="delete_btn">Delete</string>
    <string name="search_hint">Enter the name of the food</string>


    <string name="search_btn">Search</string>
    <string name="add_btn">Add</string>
    <string name="del_btn">Delete</string>

    <string name="email_hint">Enter your e-mail address</string>
    <string name="pass_hint">Enter your password</string>
    <string name="login_button">Login!</string>
    <string name="searchButton">Search</string>
    <string name="movieName">Enter a movie name</string>
    <string name="favourite">Add to favorites</string>
    <string name="open">Open</string>
    <string name="example">Example</string>
    <string name="title">Title</string>
    <string name="author2">Kamilla</string>
    <string name="version">Version: 1</string>
    <string name="ok">OK</string>
    <string name="test">Test fragment</string>


    <string name="hello">Hello World</string>

    <!-- StartActivity Menu -->
    <string name="octranspo_button">OCTranspo</string>
    <string name="nutrition_button">Nutrition</string>
    <string name="news_button">News</string>
    <string name="movie_button">Movies</string>
    <string name="hockey_button">Hockey</string>


    <!--  BUS APP STRINGS-->
    <string name="bus_avgadjustedtime">Average Adjusted Time: </string>

    <!-- NHL bottom navigation menu labels -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_teams">Teams</string>
   <string name="title_schedule">Schedule</string>
   <string name="title_favorite">Favorites</string>
   <string name="title_help">Help</string>
    <string name="away_team">Ottawa</string>

   <string name="bus_addButton">Add</string>
   <string name="bus_deleteButton">Delete</string>
   <string name="bus_helpButton">Help</string>
   <string name="busBackButton">Back</string>
   <string name="bus_badinput">Must be number</string>
   <string name="bus_stop_w_number">Stop with number </string>
   <string name="bus_stop_not_found"> was not found on the OC database.</string>
   <string name="bus_route">Route </string>
   <string name="bus_direction">Direction:</string>
   <string name="bus_starttime">Start Time: </string>
   <string name="bus_adjustedtime">Adjusted Time: </string>
   <string name="bus_latlong">Latitude/Longitude:</string>
   <string name="bus_gpsspeed">GPS Speed: </string>
   <string name="bus_infounavailable">Unavailable</string>
   <string name="bus_deletestationbutton">Delete</string>
    <string name="nutritionTag">Add Tag</string>
    <string name="tagEditTxt">Add a tag here</string>
    <string name="foodTag">Tag: </string>
    <string name="tag_stat">Tag Stat</string>
    <string name="help">HELP</string>
    <string name="delete_tag">Delete Tag</string>


</resources>


