<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/textView"
        />


    <Button
        android:id="@+id/nutrition_button"
        android:text="@string/nutrition_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />
    <Button
        android:id="@+id/news_button"
        android:text="@string/news_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />
    <Button
        android:id="@+id/movie_button"
        android:text="@string/movie_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />
    <Button
        android:id="@+id/hockey_button"
        android:text="@string/hockey_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <!--
    <Button
        android:id="@+id/octranspo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/octranspo_button"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="284dp"
        />  -->
    <Button
        android:id="@+id/bus_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/octranspo_button"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="284dp"
        />

</LinearLayout>