<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NutritionSearchActivity"
    android:background="@color/blue">
    <android.support.v7.widget.Toolbar
        android:id="@+id/nutrition_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:textStyle="italic|bold"
        android:background="@drawable/buttonshapecolor"
        android:text="@string/btn_add" />

    <Button
        android:id="@+id/btn_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/buttonshapecolor"
        android:textStyle="italic|bold"
        android:layout_marginTop="60dp"
        android:text="@string/btn_favourite" />


    <EditText
        android:id="@+id/searchEditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:hint="@string/search_hint"
        android:layout_toLeftOf="@id/btn_search" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textStyle="italic|bold"
        android:background="@drawable/buttonshapecolor"
        android:text="@string/btn_search" />

    <ListView
        android:id="@+id/searchResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_search"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        >

    </ListView>


</RelativeLayout>