<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BusActivity">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_alignParentTop="true"

        />

    <ListView
        android:id="@+id/busListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/busAddButton"
        android:layout_below="@id/progressBar"

        />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/busEditText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ems="10"

        />

    <Button
        android:id="@+id/busAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bus_addButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"

        />
    <Button
        android:id="@+id/busDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bus_deleteButton"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/busAddButton"

        />

    <Button
        android:id="@+id/busHelpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bus_helpButton"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/busDeleteButton"

        />


</RelativeLayout>